--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,149 @@
-@import url("https://fonts.googleapis.com/css?family=Press+Start+2P");
-@import url("https://fonts.googleapis.com/css?family=VT323");
+@import url('https://fonts.googleapis.com/css2?family=Odibee+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+
+.App{
+  padding: 0.5rem 3.5rem;
+  overflow: hidden;
+  color: var(--black);    
+}
 
 * {
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
-html,
+:root {
+    --color-bg: #f7c4f5;
+    --color-bg-variant: #471b76;
+    --color-primary:#e02599;
+    --color-primary-variant: #F88FCF;
+    --color-purp: #2d0557;
+    --color-lurp: #aa64f6;
+    --color-light: #ede1f9;
+    --color-neon: #50EFBD;
+
+    --transition: all 400ms ease;
+
+    --container-width-lg: 75%;
+    --container-width-md: 86%;
+    --container-width-sm: 90%;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar {
+    display: none;
+}
+
 body {
-  overscroll-behavior: none;
+    font-family: 'Poppins', sans-serif;
+    background: var(--color-purp);
+    color: var(--color-light);
+    line-height:  1.7;
+
 }
 
-body {
-  font-family: "Press Start 2P", "VT323";
-  color: white;
-  text-align: center;
-  background: #000;
-  height: 200vh;
+/* ========== GENERAL STYLES ========== */
+.container {
+    width: var(--container-width-lg);
+    margin: 0 auto;
 }
 
-.overlay {
-  opacity: 0.85;
-  width: 100%;
-  height: 100%;
-  z-index: 10;
-  top: 0;
-  left: 0;
-  position: fixed;
+h1,
+h2,
+h3,
+h4,
+h5 {
+ font-weight: 500;
+}
+
+h1 {
+ font-size: 2.5rem;
+}
+
+section {
+    margin-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+section > h2, 
+section > h5 {
+    text-align: center;
+    color: var(--color-light);
+}
+
+section > h2 {
+    color: var(--color-primary);
+    margin-bottom: 3rem;
+}
+
+.text-light {
+    color: var(--color-light);
+    transition: var(--transtion);
+}
+
+a {
+    color: var(--color-primary);
+    transition: var(--transtion);
+}
+
+a:hover {
+    color: var(--color-purp);
+}
+
+.btn {
+    width: max-content;
+    display: inline-block;
+    color: var(--color-primary);
+    padding: 0.75rem 1.2rem;
+    border-radius: 0.4rem;
+    cursor: pointer;
+    border: 1px solid var(--color-primary);
+    transition: var(--transtion);
+}
+
+.btn:hover {
+    background: var(--color-bg);
+    color: var(--color-purp);
+    border-color: transparent;
+}
+
+.btn-primary {
+    background: var(--color-primary);
+    color: var(--color-bg);
+}
+
+img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+}
+
+/* ========== MEDIA QUERIES (MEDIUM SCREEN) ========== */
+@media screen and (max-width: 1200px) {
+    .container {
+        width: var(--container-width-md);
+    }
+
+    section {
+        margin-top: 6rem;
+    }
+}
+
+/* ========== MEDIA QUERIES (SMALL SCREEN) ========== */
+@media screen and (max-width: 600px) {
+    .container {
+        width: var(--container-width-sm);
+    }
+
+    section > h2 {
+        margin-bottom: 2rem;
+    }
 }
