--- a/src/components/Toggle/Toggle.css
+++ b/src/components/Toggle/Toggle.css
@@ -1,7 +1,7 @@
 .toggle {
     display: flex;
     justify-content:space-between;
-    border: 3px solid var(--color-bg-variant);
+    border: 3px solid var(--color-primary);
     border-radius: 1rem;
     position: relative;
     padding: 2px;
@@ -16,7 +16,7 @@
 
 .t-button {
     border-radius: 100%;
-    background: var(--color-bg-variant);
+    background: var(--color-primary);
     position: absolute;
 }
 
