--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -24,14 +24,12 @@ header {
     gap: 0.8rem;
     position: absolute;
     left: 0;
-    top: 8rem;
+    top: 0;
+    transform: scale(1.3);
 }
 
-.header__socials::after {
-    content: '';
-    width: 1px;
-    height: 2rem;
-    background: var(--color-primary);
+.header__socials > a:hover {
+    color: var(--color-primary-variant);
 }
 
 /* ========== SCROLL DOWN ========== */
@@ -39,9 +37,16 @@ header {
     position: absolute;
     right: -2.3rem;
     transform: rotate(90deg);
-    font-weight: 300;
-    font-size: 0.9rem;
-    top: 15rem;
+    top: 0;
+}
+
+.header__container > a {
+    font-weight: 500;
+    font-size: 1rem;
+}
+
+.header__container > a:hover {
+    color: var(--color-primary-variant);  
 }
 
 /* ========== MEDIA QUERIES (MEDIUM SCREEN) ========== */
