--- a/src/components/cardMade/cards.css
+++ b/src/components/cardMade/cards.css
@@ -30,7 +30,7 @@
     gap: 0.8rem;
     position: absolute;
     left: 0;
-    top: 8rem;
+    top: 0;
 }
 
 .header__socials::after {
@@ -47,20 +47,24 @@
     transform: rotate(90deg);
     font-weight: 300;
     font-size: 0.9rem;
-    top: 15rem;
 }
 
-/* ========== MEDIA QUERIES (LARGE SCREEN) ========== */ 
-@media screen and (max-width: 1008px) { 
-
+/* ========== MEDIA QUERIES (DESKTOP SCREEN) ========== */ 
+@media screen and (max-width: 1224px) { 
+    .card__container-parallax,
+    .scroll__down {
+        display: none;
+    }
 }
 
-/* ========== MEDIA QUERIES (MEDIUM SCREEN) ========== */
-@media screen and (max-width: 1007px) {
-
+/* ========== MEDIA QUERIES (TABLET SCREEN) ========== */
+@media screen and (max-width: 824px) {
+    .header__socials {
+        display: none;
+    }
 }
 
-/* ========== MEDIA QUERIES (SMALL SCREEN) ========== */
-@media screen and (max-width: 641px) {
+/* ========== MEDIA QUERIES (MOBILE SCREEN) ========== */
+@media screen and (max-width: 424px) {
 
 }
