--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,9 +1,9 @@
 footer > div {
-    display: absolute;
+    display: relative;
     padding: 2rem 0;
     text-align: center;
     font-size: 0.9rem;
-    margin-top: 7rem;
+    margin-top: 1rem;
 }
 
 footer a {
@@ -20,7 +20,7 @@ footer a:hover {
     margin-bottom: 2rem;
     display: inline-block;
 }
-
+/*
 .permalinks {
     display: flex;
     flex-wrap: wrap;
@@ -33,7 +33,7 @@ footer a:hover {
     display: flex;
     justify-content: center;
     gap: 1rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 
 .footer__socials a {
@@ -50,20 +50,29 @@ footer a:hover {
     color: var(--color-neon);
     border-color: var(--color-neon);
 }
+*/
 
 .footer__copyright {
     margin-bottom: 3rem;
     color: var(--color-bg);
 }
 
-/* ========== MEDIA QUERIES (SMALL SCREEN) ========== */
-@media screen and (max-width: 600px) {
-    .permalinks {
-        flex-direction: column;
-        gap: 1.5rem;
-    }
+/* ========== MEDIA QUERIES (X-LARGE SCREEN) ========== */ 
+@media screen and (max-width: 1224px) { 
 
-    .footer__socials {
-        margin-bottom: 2.6rem;
-    }
+}
+
+/* ========== MEDIA QUERIES (LARGE SCREEN) ========== */
+@media screen and (max-width: 824px) {
+
+}
+
+/* ========== MEDIA QUERIES (MEDIUM SCREEN) ========== */
+@media screen and (max-width: 624px) {
+
+}
+
+/* ========== MEDIA QUERIES (SMALL SCREEN) ========== */
+@media screen and (max-width: 424px) {
+
 }
