--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -49,19 +49,29 @@
     flex: 2;
   }
 
-/* ========== MEDIA QUERIES (DESKTOP SCREEN) ========== */ 
+/* ========== MEDIA QUERIES (X-LARGE SCREEN) ========== */ 
 @media screen and (max-width: 1224px) { 
 
 }
 
-/* ========== MEDIA QUERIES (TABLET SCREEN) ========== */ 
-@media screen and (max-width: 824px) { 
+/* ========== MEDIA QUERIES (LARGE SCREEN) ========== */
+@media screen and (max-width: 824px) {
 
 }
 
-/* ========== MEDIA QUERIES (SMALL SCREEN) ========== */
+/* ========== MEDIA QUERIES (MEDIUM SCREEN) ========== */
 @media screen and (max-width: 624px) {
-  .n-wrapper {
+  .n-right {
     transform: scale(0.8);
+  }
+}
+
+/* ========== MEDIA QUERIES (SMALL SCREEN) ========== */
+@media screen and (max-width: 424px) {
+  .n-right {
+    display: none;
+  }
+  .n-left {
+    justify-content: center;  
   }
 }
