--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -48,9 +48,13 @@
 
 /* ========== MEDIA QUERIES (X-LARGE SCREEN) ========== */ 
 @media screen and (max-width: 1224px) { 
+    #projects {
+        padding-top: 5rem;
+    }
     .projects__container {
         grid-template-columns: 1fr 1fr;
         gap: 1rem;
+        font-size: 1rem;
     }
 }
 
@@ -64,7 +68,7 @@
 /* ========== MEDIA QUERIES (MEDIUM SCREEN) ========== */
 @media screen and (max-width: 624px) {
     .projects__container {
-        margin-top: -10rem;
+        margin-top: -12rem;
         margin-bottom: -10rem;
         transform: scale(0.85);
     }
@@ -73,8 +77,8 @@
 /* ========== MEDIA QUERIES (SMALL SCREEN) ========== */
 @media screen and (max-width: 424px) {
     .projects__container {
-        margin-top: -20rem;
-        margin-bottom: -15rem;
-        transform: scale(0.7);
+        margin-top: -10rem;
+        margin-bottom: -5rem;
+
     }
 }
