--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,9 @@
 :root {
     --color-bg: #f7c4f5;
     --color-bg-variant: #471b76;
-    --color-primary:#e02599;
+    --color-primary:#9c82ff;
     --color-primary-variant: #F88FCF;
-    --color-purp: #2d0557;
+    --color-purp: #2b2b2b;
     --color-lurp: #aa64f6;
     --color-light: #ede1f9;
     --color-neon: #50EFBD;
