--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
 }
 
 :root {
+    --color-black: #212121;
     --color-bg: #8855ff;
     --color-bg-variant: #8855ff;
     --color-primary:#FFA8DE;
