--- a/src/components/tacos/tacos.css
+++ b/src/components/tacos/tacos.css
@@ -12,15 +12,10 @@
 
 .tacos__bg {
     width: 100%;
-    height: 33%;
+    height: 50%;
     aspect-ratio: 1/1;
     border-radius: 2rem;
-    background: linear-gradient(
-        45deg,
-        transparent,
-        var(--color-primary),
-        transparent
-    );
+    background: var(--color-primary);
     display: flex;
     justify-content: center;
     align-items: center;
